--- a/css/main.css
+++ b/css/main.css
@@ -944,6 +944,30 @@ html {
   margin-left: -70px;
 }
 
+.portfolio-overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 3;
+  opacity: 0;
+  display: none;
+}
+
+.portfolio-popup-image {
+  height: 70vh;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 4;
+  opacity: 0;
+  display: none;
+}
+
 .case-study-section {
   background: url("../img/BG 2.png") center/cover no-repeat fixed;
   padding: 10vh 20vw;
@@ -1426,7 +1450,7 @@ html {
   .latest-work-section {
     padding: 15vh 17.5vw;
   }
-  .case-study-section {
+  .case-study-section, .portfolio-work-section {
     padding: 10vh 10vw;
   }
 }
@@ -1652,6 +1676,10 @@ html {
   .large-footer .footer-small-section .icon-list .icon-container .icon {
     padding: 8px;
     font-size: .85rem;
+  }
+  .portfolio-work-section .work-grid {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
   }
 }
 
@@ -1956,6 +1984,13 @@ html {
   }
   .case-study-section .case-study .case-study-img {
     width: 80%;
+  }
+  .portfolio-work-section {
+    padding: 10vh 15vw;
+  }
+  .portfolio-work-section .work-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 /*# sourceMappingURL=main.css.map */
