--- a/css/main.scss
+++ b/css/main.scss
@@ -742,6 +742,14 @@ html {
        background: url('../img/work/Category\ Images/header-people.jpg');
     }
 
+    &.plates-bg {
+        background: url('../img/work/Category\ Images/header-plates.jpg');
+    }
+
+    &.products-bg {
+        background: url('../img/work/Category\ Images/header-products.jpg');
+    }
+
     .page-title {
         text-transform: uppercase;
         font-weight: 700;
