--- a/css/main.css
+++ b/css/main.css
@@ -1016,6 +1016,92 @@ html {
   display: none;
 }
 
+.case-study-container {
+  background: url("../img/setup-baackground-2.jpg") center/cover no-repeat fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 7.5vh 0;
+}
+
+.case-study-container .case-study-body {
+  width: 60vw;
+  height: 80%;
+  background: #fff;
+  padding: 2em 4em;
+  min-width: 1000px;
+}
+
+.case-study-container .case-study-body .row-1, .case-study-container .case-study-body .row-2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  height: 30vh;
+}
+
+.case-study-container .case-study-body .text-group {
+  height: 30vh;
+}
+
+.case-study-container .case-study-body .text-group .title {
+  color: #333333;
+  font-size: 2rem;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.case-study-container .case-study-body .text-group .divider {
+  background: #4793A3;
+  height: 5px;
+  max-width: 150px;
+  width: 20%;
+  margin: .6em 0 1em 0;
+}
+
+.case-study-container .case-study-body .text-group .text {
+  color: #000;
+  line-height: 2;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.case-study-container .case-study-body .text-group .text .em {
+  color: #4793A3;
+  font-weight: bold;
+}
+
+.case-study-container .case-study-body .text-group.bottom .text {
+  margin-top: 2em;
+}
+
+.case-study-container .case-study-body .img {
+  width: 90%;
+  height: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.case-study-container .case-study-body .img.img1 {
+  margin-left: 10%;
+  -o-object-position: center -80px;
+     object-position: center -80px;
+}
+
+.case-study-container .case-study-body .img.img2 {
+  height: 40%;
+  -o-object-position: center -50px;
+     object-position: center -50px;
+}
+
 .case-study-section {
   background: url("../img/BG 2.png") center/cover no-repeat fixed;
   padding: 10vh 20vw;
@@ -1038,10 +1124,10 @@ html {
 }
 
 .case-study-section .case-study .case-study-img {
-  width: 35%;
+  width: 100%;
   height: 275px;
-  -o-object-position: center -50px;
-     object-position: center -50px;
+  -o-object-position: center -20px;
+     object-position: center -20px;
   -o-object-fit: cover;
      object-fit: cover;
   -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
