--- a/css/main.scss
+++ b/css/main.scss
@@ -944,6 +944,81 @@ html {
     display:none;
 }
 
+//////// CASE STUDY CONTAINER (portfolio/*/case-study) STYLES ////////
+.case-study-container {
+    background: url('../img/setup-baackground-2.jpg') center/cover no-repeat fixed;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    padding: 7.5vh 0;
+
+    .case-study-body {
+        width: 60vw;
+        height: 80%;
+        background: #fff;
+        padding: 2em 4em;
+        min-width:1000px;
+
+        .row-1, .row-2 {
+            display:grid;
+            grid-template-columns: 1fr 1fr;
+            height: 30vh;
+        }
+
+        .text-group {
+            height: 30vh;
+
+            .title {
+                color: $darkGrey;
+                font-size: 2rem;
+                font-weight:900;
+                text-transform: uppercase;
+            }
+
+            .divider {
+                background: $primary;
+                height: 5px;
+                max-width: 150px;
+                width: 20%;
+                margin: .6em 0 1em 0;
+            }
+
+            .text {
+                color: #000;
+                line-height: 2;
+                font-size: 1rem;
+                width: 100%;
+
+                .em {
+                    color: $primary;
+                    font-weight: bold;
+                }
+            }
+
+            &.bottom .text {
+                margin-top: 2em;
+            }
+        }
+
+        .img {
+            width:90%;
+            height: 50%;
+            object-fit:cover;
+            box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
+
+            &.img1 {
+                margin-left: 10%;
+                object-position: center -80px;
+            }
+
+            &.img2 {
+                height: 40%;
+                object-position: center -50px;
+            }
+        }
+    }
+}
+
 //////// CASE STUDY SECTION (portfolio/*) STYLES ////////
 .case-study-section {
     background: url('../img/BG\ 2.png') center/cover no-repeat fixed;
@@ -959,9 +1034,9 @@ html {
         align-items: center;
 
         .case-study-img {
-            width: 35%;
+            width: 100%;
             height: 275px;
-            object-position: center -50px;
+            object-position: center -20px;
             object-fit:cover;
             box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
         }
