--- a/css/main.scss
+++ b/css/main.scss
@@ -954,66 +954,72 @@ html {
 
     .case-study-body {
         width: 60vw;
-        height: 80%;
         background: #fff;
-        padding: 2em 4em;
+        padding: 4em;
         min-width:1000px;
+        text-align:center;
 
-        .row-1, .row-2 {
-            display:grid;
-            grid-template-columns: 1fr 1fr;
-            height: 30vh;
+        .title {
+            color: $darkGrey;
+            font-size: 2rem;
+            font-weight:900;
+            text-transform: uppercase;
+            text-align:left;
         }
 
-        .text-group {
-            height: 30vh;
+        .divider {
+            background: $primary;
+            height: 5px;
+            max-width: 150px;
+            width: 20%;
+            margin: .6em 0 1em 0;
+        }
 
-            .title {
-                color: $darkGrey;
-                font-size: 2rem;
-                font-weight:900;
-                text-transform: uppercase;
-            }
-
-            .divider {
-                background: $primary;
-                height: 5px;
-                max-width: 150px;
-                width: 20%;
-                margin: .6em 0 1em 0;
-            }
+        .grid {
+            width: 100%;
+            display:grid;
+            grid-template-columns: 1fr 1fr;
 
             .text {
-                color: #000;
-                line-height: 2;
-                font-size: 1rem;
-                width: 100%;
+                width: 90%;
+                color: $darkGrey;
+                line-height: 2em;
+                margin-top: 2em;
+                text-align:left;
+
+                &:not(:first-of-type) {
+                    margin-left:5%;
+                }
 
                 .em {
                     color: $primary;
                     font-weight: bold;
+                    font-size: 1.1rem;
+                }
+
+                &.num-4 {
+                    margin-top: 3.5em;
                 }
             }
 
-            &.bottom .text {
-                margin-top: 2em;
-            }
-        }
+            .img {
+                width:90%;
+                margin-bottom: 4em;
+                border-radius: 10px;
+                box-shadow: 0 0 10px rgba(0,0,0,0.1);
 
-        .img {
-            width:90%;
-            height: 50%;
-            object-fit:cover;
-            box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
+                &:first-of-type {
+                    margin: 0 auto 4em auto;                    
+                }
 
-            &.img1 {
-                margin-left: 10%;
-                object-position: center -80px;
-            }
+                &.dual-img {
+                    width: 100%;
+                    box-shadow: none;
+                }
 
-            &.img2 {
-                height: 40%;
-                object-position: center -50px;
+                &:last-of-type {
+                    margin-top: 2em;
+                }
             }
         }
     }
