--- a/css/main.css
+++ b/css/main.css
@@ -1087,19 +1087,15 @@ html {
 .case-study-container .case-study-body .grid .img {
   width: 90%;
   margin-bottom: 4em;
-  border-radius: 10px;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
 
-.case-study-container .case-study-body .grid .img:first-of-type {
+.case-study-container .case-study-body .grid .img:first-of-type, .case-study-container .case-study-body .grid .img:nth-child(2n) {
   margin: 0 auto 4em auto;
 }
 
 .case-study-container .case-study-body .grid .img.dual-img {
-  width: 100%;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  border-radius: 0px;
 }
 
 .case-study-container .case-study-body .grid .img:last-of-type {
