--- a/css/main.scss
+++ b/css/main.scss
@@ -1005,16 +1005,14 @@ html {
             .img {
                 width:90%;
                 margin-bottom: 4em;
-                border-radius: 10px;
-                box-shadow: 0 0 10px rgba(0,0,0,0.1);
+                border-radius: 5px;
 
-                &:first-of-type {
+                &:first-of-type, &:nth-child(2n) {
                     margin: 0 auto 4em auto;                    
                 }
 
                 &.dual-img {
-                    width: 100%;
-                    box-shadow: none;
+                    border-radius: 0px;
                 }
 
                 &:last-of-type {
