Added Underline on Hover for footer links

--- a/css/main.scss
+++ b/css/main.scss
@@ -543,6 +543,10 @@ html {
                             color: #aaa;
                             font-size: .75rem;
                             text-decoration: none;
+
+                            &:hover {
+                                text-decoration: underline;
+                            }
                         }
                     }
                 }
