--- a/css/main.css
+++ b/css/main.css
@@ -397,14 +397,14 @@ html {
   overflow-y: hidden;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 3fr;
-      grid-template-columns: 2fr 3fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  background: url("../img/pattern-bg.png") center/cover no-repeat;
 }
 
 .about-section .text-section {
   width: 100%;
   height: 100%;
-  background: url("../img/pattern-bg.png") center/cover no-repeat;
 }
 
 .about-section .text-section .title {
@@ -438,13 +438,19 @@ html {
 .about-section .image-section {
   height: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .about-section .image-section .logo {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  top: -200px;
+  height: 92vh;
+  max-width: 50vw;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .contact-section {
