--- a/css/main.scss
+++ b/css/main.scss
@@ -371,12 +371,12 @@ html {
     height: 92vh;
     overflow-y: hidden;
     display: grid;
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 1fr 1fr;
+    background: url('../img/pattern-bg.png') center/cover no-repeat;
 
     .text-section {
         width: 100%;
         height: 100%;
-        background: url('../img/pattern-bg.png') center/cover no-repeat;
 
         .title {
             color: $darkGrey;
@@ -409,12 +409,13 @@ html {
     .image-section {
         height: 100%;
         width: 100%;
+        display: flex;
+        justify-content: flex-end;
 
         .logo {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            top: -200px;
+            height: 92vh;
+            max-width:50vw;
+            object-fit:cover;
         }
 
     }
