--- a/css/main.scss
+++ b/css/main.scss
@@ -1170,8 +1170,8 @@ html {
                 gap: 1em;
 
                 img {
-                    width: 100%;
                     height: 100%;
+                    width: 100%;
 
                     &.taller {
                         grid-row: span 2;
@@ -2555,14 +2555,17 @@ html {
 
         .content-section .images-container,
         .large-img-grid,
+        .larger-img-grid,
         .small-img-grid {
             grid-template-columns: 1fr;
             row-gap: 2em;
             column-gap: 0;
 
-            * {
-                grid-row: span 1;
-                grid-column: span 1;
+            img,
+            img.taller,
+            img.regular {
+                height: auto;
+                width: 100%;
             }
         }
 
