Fixed Products Header Background Image

--- a/css/main.css
+++ b/css/main.css
@@ -806,7 +806,7 @@ html {
 }
 
 .header-w-divider.products-bg {
-  background: url("../img/work/Category Images/header-products.jpg");
+  background: url("../img/work/Category Images/Products.jpg") center/cover no-repeat;
 }
 
 .header-w-divider.the-ring-shop-bg {
