--- a/css/main.scss
+++ b/css/main.scss
@@ -758,7 +758,7 @@ html {
     }
 
     &.products-bg {
-        background: url('../img/work/Category Images/header-products.jpg');
+        background: url('../img/work/Category Images/Products.jpg') center/cover no-repeat;
     }
 
     &.the-ring-shop-bg {
